objects/Staff_Course__c.object
<CustomObject>
    <description>Junction object between Staff and Course; displays all the courses taught by the Staff</description>
    <fields>
        <fullName>Course__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Course</label>
        <referenceTo>Course__c</referenceTo>
        <relationshipLabel>Staff/Courses</relationshipLabel>
        <relationshipName>Staff_Courses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Staff__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Staff</label>
        <referenceTo>Staff__c</referenceTo>
        <relationshipLabel>Staff/Courses</relationshipLabel>
        <relationshipName>Staff_Courses</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Staff/Course</label>
    <nameField>
        <label>Staff/Course Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Staff/Courses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>